# tcare-notification-schedulre

./: pyproject.toml  requirements.txt
ScheduleCheck/: __init__.py  config.py  database.py  models.py  schemas.py
